--- a/bmr_header.html
+++ b/bmr_header.html
@@ -7,7 +7,8 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">VARs <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="bmr_docs_vars_bvarm.html">bvarm</a></li>
-                    <li><a href="bmr_docs_vars_bvars.html">bvars</a></li>
+                    <!-- <li><a href="bmr_docs_vars_bvars.html">bvars</a></li> -->
+                    <li><a href="#">bvars</a></li>
                     <li><a href="bmr_docs_vars_bvarw.html">bvarw</a></li>
                     <li class="divider"></li>
                     <li><a href="bmr_docs_vars_cvar.html">cvar</a></li>
