--- a/bmr_docs_vars_bvarw.html
+++ b/bmr_docs_vars_bvarw.html
@@ -185,7 +185,7 @@ bvar_obj$gibbs(n_draws,n_burnin)
 
 <ul>
     <li><code>n_draws</code> number of posterior draws.</li>
-    <li><code>n_draws</code> number of burnin draws.</li>
+    <li><code>n_burnin</code> number of burnin draws.</li>
 </ul>
 
 <hr style="height:2px;border-width:0;background-color:black">
