--- a/bmr.html
+++ b/bmr.html
@@ -117,10 +117,12 @@ pre {
 
 <p><strong>Package requirements</strong>: R (v3.40, or above) and Rcpp, RcppArmadillo, ggplot2, and grid (this comes pre-packaged with R). </p>
 
-<p>Execute the following commands, post installation of R itself, and you should be good to go:</p>
+<ul>
+    <li>Execute the following commands, post installation of R itself, and you should be good to go:</p>
 <pre>
 install.packages("RcppArmadillo")
 install.packages("ggplot2")</pre>
+</ul>
 
 <p>The source code is available on <a href="https://github.com/kthohr/BMR" target="_blank">GitHub</a>. You need to install BMR from source.</p>
 <ul>
