--- a/bmlib.html
+++ b/bmlib.html
@@ -151,10 +151,10 @@ pre {
 
 <p>BMLib can be installed in the standard way:</p>
 <pre class="brush: bash;">
-# clone optim
+# clone bmlib
 git clone -b master --single-branch https://github.com/kthohr/bmlib ./bmlib
 # build and install
-cd ./optim
+cd ./bmlib
 ./configure
 make
 make install</pre>
