--- a/trame-rcpp.html
+++ b/trame-rcpp.html
@@ -75,6 +75,7 @@ pre {
             <div class="col-lg-12">
                 <ol class="breadcrumb">
                     <li><a href="http://www.kthohr.com">Home</a></li>
+                    <li><a href="trame.html">TraME</a></li>
                     <li class="active">TraME-Rcpp</li>
                 </ol>
             </div>
