--- a/trame.html
+++ b/trame.html
@@ -69,6 +69,7 @@
                 <ol class="breadcrumb">
                     <li><a href="http://www.kthohr.com">Home</a></li>
                     <li class="active">TraME</li>
+                    <li><a href="trame-rcpp.html">TraME-Rcpp</a></li>
                 </ol>
             </div>
         </div>
